# apple_music_cli

./: CMakeLists.txt  README.md  api_test.cpp  apple-music-api.h  apple_music_menu.h  main.cpp
